# greyhound-horse-signals

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: bfb_tips_config.yaml
scripts/: analyze_track_aliases.py  api_server.py  clean_greyhound_results.py  clean_horse_results.py  convert_greyhound_history.py  download_betfair_prices.py  generate_daily_entries.py  generate_greyhound_signals.py  generate_horse_signals.py  run_all_daily.py  run_greyhounds_streamlit.py  run_horses_streamlit.py  streamlit_greyhounds_app.py  streamlit_horses_app.py  validate_data_layout.py
scripts/greyhounds/: analyze_track_aliases.py  clean_greyhound_results.py  convert_greyhound_history.py  export_bfb_tips.py  generate_greyhound_signals.py  generate_xbtips_signals.py  gerar_dicas_bfb.py  parse_timeform.py  quick_checks.py  run_gerar_dicas_bfb.bat  run_greyhounds_daily.py  run_greyhounds_streamlit.py  scrape_xbtips_daily.py  scrape_xbtips_historical.py  stop_loss.py  streamlit_app.py  streamlit_greyhounds_app.py  units_helper.py
scripts/horses/: analyze_track_aliases.py  build_horses_result_index.py  build_horses_signals_enriched.py  check_parquet_and_enriched.py  clean_horse_results.py  convert_horse_history.py  generate_horse_signals.py  quick_checks.py  run_horses_daily.py  run_horses_streamlit.py  streamlit_horses_app.py  units_helper.py
scripts/vps_setup/: run_automacao_diaria.bat  start_api.bat  start_dashboard_cavalos.bat  start_dashboard_galgos.bat
src/core/: config.py
src/greyhounds/: config.py  run_daily.py  scrape_betfair_index.py  scrape_timeform_update.py  (+1 more)
(+29 files in other folders)
