[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "projeto_unificado"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1",
    "selenium>=4.25",
    "webdriver-manager>=4.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "rich>=13.8",
    "python-dateutil>=2.9",
    "pyarrow>=16.0",
    "streamlit>=1.38",
    "altair>=5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_configs = true